# kuiper

./: .gitignore  README.md  config.yaml  kuiper.db  pyproject.toml
kuiper/: __init__.py  db.py  db_test.py  init_db.py  main.py  tui.py
kuiper/models/: Base.py  Post.py  User.py  __init__.py
kuiper/remote/: Client.py  Server.py  __init__.py
kuiper/tui/: __init__.py  input.py  states.py  tui.py  utils.py  views.py
tests/: test_kuiper.py
