[tool.poetry]
name = "kuiper"
version = "0.1.0"
description = "A terminal-based dating application for UTD students"
authors = ["CharlesAverill <charlesaverill20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "1.4.20"
PyYAML = "5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kuiper = 'kuiper.main:main'
