[tool.poetry]
name = "kuiper"
version = "0.5.5"
description = "A terminal-based dating application for UTD students"
readme = "README.md"
homepage = "https://github.com/CharlesAverill/kuiper"
authors = ["CharlesAverill <charlesaverill20@gmail.com>"]
include = ["config.yaml"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "1.4.20"
PyYAML = "5.3"
websockets = "9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kuiper = 'kuiper.main:main'
